<resources>
    <string name="app_name">GroupBuyingActivity</string>
    <string name="user_login">用户登录</string>
    <string name="login_user_hint">请输入用户名/手机/邮箱</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_btn">登录</string>
    <string name="find_pwd">找回密码</string>
    <string name="free_register">免费注册</string>
    <string name="user_register">用户注册</string>
    <string name="register">注册</string>
    <string name="plz_enter_pwd">请输入密码</string>
    <string name="plz_enter_username">请输入用户名</string>
    <string name="err_login">用户名或密码错误</string>
    <string name="beijing">北京</string>
    <string name="request_fail">请求失败</string>
    <string name="they_all_group">--大家都在团--</string>
    <string name="food_more_detail">商品详细信息</string>
    <string name="food_score">评分</string>
</resources>
